# hyperparameter-optimization

./: .gitignore  README.md  model.py  optimization.py  pyproject.toml  random_search.py  rnn.py
HpBandSter/: keras_worker_rnn.py
Optimization_HpBandSter/: optimization_cbn_vae.py  optimization_rnn.py  worker_cbn_vae.py  worker_rnn.py
RNN_HpBandSter/: example_keras_workers.py  example_mnist.py  keras_worker_cbn_vae.py  keras_worker_rnn.py
Testingit/: example_keras_workers.py  example_mnist.py
global_utils/: callback.py  evaluation.py  get_data.py  get_data_multi_note.py  get_data_multi_note_without_smoothing.py  loss_function.py  plot_sequence.py  plotter.py  save_metadata.py  train_model.py
global_utils/layers/: RBM_custom_conv2d_transpose.py  custom_conv2d_transpose.py  max_pooling_with_argmax.py  sampling.py  unpooling_with_argmax.py
lib/: create_cbn_vae.py  create_rnn.py  get_best_result_hpbandster.py  get_tuner.py  model_configs.py  mse_without_nans.py
models/: c_vae_model.py  rnn.py
optimization_utils/Optimization_HpBandSter/: create_arguments.py  get_configs.py  json_results_saver.py  optimization_cbn_vae.py  optimization_rnn.py  save_metadata.py  worker_cbn_vae.py  worker_rnn.py
optimization_utils/Optimization_Keras_Tuner/: c_vae_model.py  rnn.py  save_metadata.py
