[tool.poetry]
name = "hyperparameter-optimization"
version = "0.1.0"
description = ""
authors = ["Alexander Kuebel <alexander.kuebel@code.berlin>"]

[tool.poetry.dependencies]
python = "^3.7.10"
keras-tuner = "1.0.3"
matplotlib = "^3.4.2"
sklearn = "^0.0"
keras = "^2.4.3"
tensorflow = "~2.4.0"
pandas = "1.2.5"
kerastuner-tensorboard-logger = "^0.2.3"
tensorboard = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
